[package]
name = "the-all-in-one-multitool"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
chrono = "0.4.42"
csv = "1.3.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }